# roguelike-c

./: .clang-format  CMakeLists.txt
res/: dejavu10x10_gs_tc.xcf
src/: app.c  app.h  array.h  astar.c  astar.h  color.h  console.c  console.h  entity.c  entity.h  equipment.c  equipment.h  events.c  events.h  fov.c  fov.h  game_map.c  game_map.h  gameplay_state.c  gameplay_state.h  inventory.c  inventory.h  items.c  items.h  main.c  mainmenu_state.c  mainmenu_state.h  panic.c  savefile.c  savefile.h  terminal.c  terminal.h  tileset.c  tileset.h  turn_log.c  turn_log.h  types.c  types.h  ui.c  ui.h
